// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should render 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="Switch__SwitchText-sc-161iiro-0 eZQQaE"
      role="button"
    >
      Option A
    </span>
    <label
      class="flex"
    >
      <input
        class="Toggle__Input-sc-6s3wfu-0 lktEK"
        type="checkbox"
      />
      <div
        class="Toggle__Handle-sc-6s3wfu-1 beOBjf"
      >
        <span
          class="Toggle__HandleInner-sc-6s3wfu-2 fIKATV"
        />
      </div>
    </label>
    <span
      class="Switch__SwitchText-sc-161iiro-0 OMZuZ"
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;

exports[`Switch should render disabled 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="Switch__SwitchText-sc-161iiro-0 ePGhWU"
      disabled=""
      role="button"
    >
      Option A
    </span>
    <label
      class="flex"
    >
      <input
        class="Toggle__Input-sc-6s3wfu-0 lktEK"
        disabled=""
        type="checkbox"
      />
      <div
        class="Toggle__Handle-sc-6s3wfu-1 bIoSPE"
        disabled=""
      >
        <span
          class="Toggle__HandleInner-sc-6s3wfu-2 bceDMq"
          disabled=""
        />
      </div>
    </label>
    <span
      class="Switch__SwitchText-sc-161iiro-0 dCLirF"
      disabled=""
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;

exports[`Switch should render large labels 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="Switch__SwitchText-sc-161iiro-0 dHvvEP"
      role="button"
    >
      Option A
    </span>
    <label
      class="flex"
    >
      <input
        class="Toggle__Input-sc-6s3wfu-0 lktEK"
        type="checkbox"
      />
      <div
        class="Toggle__Handle-sc-6s3wfu-1 beOBjf"
      >
        <span
          class="Toggle__HandleInner-sc-6s3wfu-2 fIKATV"
        />
      </div>
    </label>
    <span
      class="Switch__SwitchText-sc-161iiro-0 fRJBgu"
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;

exports[`Switch should render small labels 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="Switch__SwitchText-sc-161iiro-0 faOaTv"
      role="button"
    >
      Option A
    </span>
    <label
      class="flex"
    >
      <input
        class="Toggle__Input-sc-6s3wfu-0 lktEK"
        type="checkbox"
      />
      <div
        class="Toggle__Handle-sc-6s3wfu-1 gIZJpw"
      >
        <span
          class="Toggle__HandleInner-sc-6s3wfu-2 dOCfNx"
        />
      </div>
    </label>
    <span
      class="Switch__SwitchText-sc-161iiro-0 bBuInq"
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;
